moved to wpgraphql

--- a/src/assets/styles/scss/modules/_variables.scss
+++ b/src/assets/styles/scss/modules/_variables.scss
@@ -6,6 +6,5 @@ $secondary_color:#0000ff;
     --lightColor: #ffffff;
     --lightAccentColor: #f8f8f8;
 
-    --mainFont: 'Space';
-    --accentFont: 'Space';
+    --mainFont: 'Inter var';
 }
