--- a/src/assets/styles/scss/modules/_header.scss
+++ b/src/assets/styles/scss/modules/_header.scss
@@ -2,14 +2,18 @@
     padding: 1rem;
     display: flex;
     justify-content: space-between;
-    font-weight: 700;
+    font-weight: 550;
     font-size: 1.1rem;
     z-index: 2;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    font-family: var(--accentFont);
+
+    @include breakpoint(up, lg) {
+        font-size: 1.2rem;
+        padding: 2rem;
+    }
 
     .scrolling & {
         background: var(--mainColor);
