--- a/src/assets/styles/scss/modules/_typography.scss
+++ b/src/assets/styles/scss/modules/_typography.scss
@@ -12,6 +12,8 @@
     font-weight: 700;
 }
 
+@import url('https://rsms.me/inter/inter.css');
+
 * {
     box-sizing: border-box;
 }
@@ -19,7 +21,7 @@
 html,
 body {
     font-family: var(--mainFont);
-    font-weight: 400;
+    font-weight: 350;
     font-size: 1.1rem;
     line-height: 1.75rem;
 
@@ -43,8 +45,7 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: var(--accentFont);
-    font-weight: 700;
+    font-weight: 550;
 }
 
 p {
