updates to post template

--- a/src/assets/styles/scss/modules/_variables.scss
+++ b/src/assets/styles/scss/modules/_variables.scss
@@ -2,9 +2,9 @@ $primary_color:#333;
 $secondary_color:#0000ff;
 
 :root {
-    --mainColor: #111;
+    --mainColor: #121212;
     --lightColor: #ffffff;
     --lightAccentColor: #f8f8f8;
 
-    --mainFont: 'Inter var';
+    --mainFont: 'Space';
 }
