--- a/src/assets/styles/scss/modules/_global.scss
+++ b/src/assets/styles/scss/modules/_global.scss
@@ -19,7 +19,7 @@ body {
 
   @include breakpoint(up, lg) {
     margin: 0 auto;
-    width: 45vw;
+    width: 55vw;
   }
 }
 
@@ -28,16 +28,16 @@ body {
   transform: translateY(150px);
 }
 
-// pre {
-//   background: #000;
-//   padding: .5rem;
-//   border-radius: 5px;
+pre {
+  background: #000;
+  padding: .5rem;
+  border-radius: 5px;
 
-//   @include breakpoint(up, lg) {
-//     width: calc(100% + 15vw);
-//     margin-left: -7.5vw;
-//   }
-// }
+  @include breakpoint(up, lg) {
+    width: calc(100% + 15vw);
+    margin-left: -7.5vw;
+  }
+}
 
 svg {
   &.accent__blob {
