--- a/src/assets/styles/scss/modules/_variables.scss
+++ b/src/assets/styles/scss/modules/_variables.scss
@@ -6,5 +6,6 @@ $secondary_color:#0000ff;
     --lightColor: #ffffff;
     --lightAccentColor: #f8f8f8;
 
-    --mainFont: 'Space',sans-serif;
+    --mainFont: 'Space', sans-serif;
+    --accentFont: 'League Spartan', sans-serif;
 }
