Updated font name

--- a/src/assets/styles/scss/modules/_typography.scss
+++ b/src/assets/styles/scss/modules/_typography.scss
@@ -16,8 +16,8 @@
 
 @font-face {
     font-family: 'Technique Sans';
-    src: url('../../fonts/technique.woff2') format('woff2'),
-        url('../../fonts/technique.woff') format('woff');
+    src: url('../../fonts/Technique.woff2') format('woff2'),
+        url('../../fonts/Technique.woff') format('woff');
     font-weight: normal;
     font-display: fallback;
 }
