--- a/src/assets/styles/scss/modules/_header.scss
+++ b/src/assets/styles/scss/modules/_header.scss
@@ -3,6 +3,7 @@
     display: flex;
     justify-content: space-between;
     font-family: var(--accentFont);
+    font-weight: 700;
     font-size: 1.1rem;
     z-index: 2;
     position: fixed;
