--- a/src/assets/styles/scss/modules/_header.scss
+++ b/src/assets/styles/scss/modules/_header.scss
@@ -2,7 +2,7 @@
     padding: 1rem;
     display: flex;
     justify-content: space-between;
-    font-family: var(--accentFont);
+    // font-family: var(--accentFont);
     font-weight: 700;
     font-size: 1.1rem;
     z-index: 2;
