--- a/src/assets/styles/scss/modules/_global.scss
+++ b/src/assets/styles/scss/modules/_global.scss
@@ -17,7 +17,7 @@ body {
 .wrapper {
   padding: 0 1rem;
 
-  @include breakpoint(up, lg) {
+  @include breakpoint(up, xl) {
     margin: 0 auto;
     width: 45vw;
   }
