--- a/src/assets/styles/scss/modules/_header.scss
+++ b/src/assets/styles/scss/modules/_header.scss
@@ -26,8 +26,14 @@
     }
 
     &-logo {
+        #logo{
+            transition: all 0.25s;
+        }
         svg {
-            width: 50px;
+            width: 5rem;
+            *{
+                fill:var(--lightColor);
+            }
         }
 
         span {
