--- a/src/assets/styles/scss/modules/_header.scss
+++ b/src/assets/styles/scss/modules/_header.scss
@@ -25,25 +25,40 @@
         top: 0;
     }
 
-    &-logo {
-        #logo{
-            transition: all 0.25s;
-        }
+    #hamburger {
+        background: rgba(0, 0, 0, 0);
+        outline: 0;
+        border: 0;
+        padding: 0;
+        margin: 0;
+        cursor: pointer;
+        position: relative;
+        z-index: 5;
+
         svg {
-            width: 5rem;
-            *{
-                fill:var(--lightColor);
+            width: 3rem;
+            height: 3rem;
+        }
+
+        &:hover {
+            svg {
+                #top {
+                    margin-bottom: 10px;
+                }
             }
         }
+    }
 
-        span {
-            transition: all 0.35s;
+    &-logo {
+        #logo {
+            transition: all 0.25s;
         }
 
-        &.small {
-            span {
-                margin-left: -120px;
-                opacity: 0;
+        svg {
+            width: 8rem;
+
+            * {
+                fill: var(--lightColor);
             }
         }
     }
@@ -54,13 +69,21 @@
     }
 
     &-nav {
+        padding: 5rem;
+        position: fixed;
+        top: 0;
+        right: -50vw;
+        width: 50vw;
+        height: 100vh;
+        background: #333;
         display: flex;
-        align-items: center;
+
+        justify-content: center;
+        flex-direction: column;
 
         a {
-            &:not(:last-of-type) {
-                margin-right: 2rem;
-            }
+            font-size: 5rem;
+            line-height: normal;
         }
     }
 }
